examples/test/testpolicy13840.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13840
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key49: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value32
          key39: value8
          key11: value48
      podSelector:
        matchLabels:
          key14: value43
